CKW-105 Focus is not visible -- changed my mind and recycled original has-focus-style class to target the footer images and links correctly

--- a/wp-content/themes/portent_enercare_2021/assets/scss/partials/_site-footer.scss
+++ b/wp-content/themes/portent_enercare_2021/assets/scss/partials/_site-footer.scss
@@ -6,7 +6,7 @@
 	padding: 40px 0 10px;
 	position: relative;
 
-	.footer-image {
+	.has-focus-style {
 		a {
 			&:focus {
 				& > img {
@@ -122,7 +122,7 @@
 		margin-left: 12px;
 	}
 
-	.footer-image {
+	.has-focus-style {
 		> figure {
 			> a {
 				
